# quassel-web

./: CMakeLists.txt  README
cmake/modules/: FindWt.cmake
src/: CMakeLists.txt
src/client/: abstractmessageprocessor.h  abstractui.h  buffermodel.h  bufferviewoverlay.h  client.h  clientbacklogmanager.h  clientbufferviewconfig.h  clientbufferviewmanager.h  clientcoreinfo.h  clientidentity.h  clientignorelistmanager.h  clientirclisthelper.h  clientuserinputhandler.h  coreaccountmodel.h  coreconnection.cpp  coreconnection.h  execwrapper.h  irclistmodel.h  messagefilter.h  messagemodel.h  networkmodel.h  selectionmodelsynchronizer.h  treemodel.h
src/common/: aliasmanager.h  backlogmanager.cpp  backlogmanager.h  buffersyncer.cpp  buffersyncer.h  bufferviewconfig.cpp  bufferviewconfig.h  bufferviewmanager.cpp  bufferviewmanager.h  coreinfo.h  eventmanager.h  identity.cpp  identity.h  ignorelistmanager.h  internalpeer.h  ircchannel.cpp  ircchannel.h  irclisthelper.h  ircuser.cpp  ircuser.h  main.cpp  network.cpp  network.h  networkconfig.cpp  networkconfig.h  quassel.h  settings.cpp  settings.h  signalproxy.cpp  signalproxy.h  syncableobject.cpp  syncableobject.h  types.h
src/core/: coreircchannel.cpp
src/qtui/: mainwin.cpp
src/qtui/settingspages/: appearancesettingspage.ui
src/uisupport/: abstractbuffercontainer.h  abstractitemview.h  abstractnotificationbackend.h  action.h  actioncollection.h  bufferview.h  bufferviewfilter.h  bufferviewoverlayfilter.h  clearablelineedit.h  clickablelabel.h  colorbutton.h  flatproxymodel.h  fontselector.h  graphicalui.h  multilineedit.h  networkmodelcontroller.h  nickview.h  resizingstackedwidget.h  settingspage.h  styledlabel.h  toolbaractionprovider.h  uistyle.h
src/webui/: CMakeLists.txt  webapplication.cpp  webapplication.h  weblogindialog.cpp  weblogindialog.h  webmessagemodel.cpp  webmessagemodel.h  webmessagemodelitem.cpp  webmessagemodelitem.h  webmessageprocessor.cpp  webmessageprocessor.h  webui.cpp  webui.h  webwindow.cpp  webwindow.h
src/webui/lib/: CMakeLists.txt  CMakeLists.txt~  dispatchthread.cpp  dispatchthread.cpp~  dispatchthread.h  dispatchthread.h~  wqapplication.cpp  wqapplication.h  wqapplication.h~
